--- a/index.html
+++ b/index.html
@@ -5,11 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="top-page">
+        <div class="first-page">
+            <h1>Stay Focused on <span class="orange-color">Mission 2022</span> </h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <br>
+            <a class="button" target="-blank" href="">Explore Now</a>
+            <br>
+            <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="first-page">
+            <img src="images/person/person-2.png" alt="">
+        </div>
+    </section>
+    <section class="Mission-page">
+        <h2>My Mission in <span class="orange-color"> 2022</span></h2>
+        <div class="top-page">
+            <div class="mission">
+                <div class="div-picture">
+                    <img src="images/illustrators/illustrator-1.png" alt="">
+                </div>
+                <div>
+                    <h3>Mission</h3>
+                    <p>Amet minim mollit non deserunt
+                        ullamco est sit aliqua dolor do amet
+                        sint. Velit officia consequat duis enim
+                        velit mollit.</p>
+                </div>
+            </div>
+            <div class="second-page">
+                <h3>Vission</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="second-page ">
+                <h3>Goals</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
