--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-page">
+    <section class="top-page flexible-container">
         <div class="first-page">
             <h1>Stay Focused on <span class="orange-color">Mission 2022</span> </h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit
@@ -28,29 +28,25 @@
             <img src="images/person/person-2.png" alt="">
         </div>
     </section>
-    <section class="Mission-page">
-        <h2>My Mission in <span class="orange-color"> 2022</span></h2>
-        <div class="top-page">
-            <div class="mission">
-                <div class="div-picture">
-                    <img src="images/illustrators/illustrator-1.png" alt="">
-                </div>
-                <div>
-                    <h3>Mission</h3>
-                    <p>Amet minim mollit non deserunt
-                        ullamco est sit aliqua dolor do amet
-                        sint. Velit officia consequat duis enim
-                        velit mollit.</p>
-                </div>
+    <section class="top-page">
+        <h2 id="heading">My Mission in <span class="orange-color"> 2022</span></h2>
+        <div class="flexible-container">
+            <div class="Mission second">
+                <h3>Mission</h3>
+                <p>Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+
             </div>
-            <div class="second-page">
+            <div class="Vission second">
                 <h3>Vission</h3>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
                     sint. Velit officia consequat duis enim
                     velit mollit.</p>
             </div>
-            <div class="second-page ">
+            <div class="Goals second">
                 <h3>Goals</h3>
                 <p>Amet minim mollit non deserunt
                     ullamco est sit aliqua dolor do amet
@@ -58,6 +54,41 @@
                     velit mollit.</p>
             </div>
         </div>
+    </section>
+
+    <section class="last-pic flexible-container">
+        <div class="first-page">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="first-page">
+            <h1>Develop Without Limits</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An
+                mundi noster pri, ea eos uas expetendis scripserit, affert gubergren
+                dissentias et cum</p>
+            <a class="button" href="">Read the Documentation</a>
+        </div>
+
+
+    </section>
+    <section class="last-div flexible-container">
+        <div class="first-page">
+            <h1>Know our Global Community</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
+                falli deterruisset. No duo populo animal noluisse, enim deterruisset
+                eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert
+                gubergren dissentias et cum.</p>
+            <a class="button" href="">Read the Documentation</a>
+        </div>
+        <div class="first-page">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <section class="last-section">
+        <h3>Mission 2022</h3>
+        <footer class="last">
+            <p>Hard work, Perseverance, and Determination for 2022</p>
+        </footer>
     </section>
 
 </body>
